--- a/src/main.css
+++ b/src/main.css
@@ -117,3 +117,19 @@ input {
   outline: none;
   border-bottom: 1px solid var(--accent-color);
 }
+
+.softkey {
+  @apply flex items-center;
+}
+
+.softkey > div:first-child {
+  @apply flex justify-start w-full
+}
+
+.softkey > div:nth-child(2) {
+  @apply flex justify-center font-bold text-center uppercase mx-auto
+}
+
+.softkey > div:last-child {
+  @apply flex justify-end w-full
+}
